--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>Tom Coleman</h1>
-  <p>You've found me on the internet. This page is a placeholder</p>
+  <p>You've found me on the internet. This page is a placeholder.</p>
   
   <h2>Some links that you may be interested in
   <ul>
