Tightened it up.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="assets/screen.css" type="text/css">
 </head>
 <body>
+  <div class="rhs sidebar">
+    <img src="assets/profile.jpg"/>
+    <p class="caption">You'll struggle to find a picture of me with Google Image search. Too many Tom Colemans I guess. This is me.</p>
+  </div>
+
   <h1>Tom Coleman</h1>
-  <p>You've found me on the internet. This page is a placeholder.</p>
+  <p>You've found me on the internet. This page is here to point you on to more useful places.</p>
+  
   
   <h2>Some links that you may be interested in:</h2>
   <ul>
@@ -21,7 +28,13 @@
     <li><a href="http://github.com/tmeasday" rel="me">My Github profile, might be of interest</a></li>
   </ul>
   
+  <div class="rhs sidebar">
+    <img src="assets/thesis.png"/>
+    <p class="caption">Yup. They really gave me a PhD. Still can't believe I finished it sometimes.</p>
+  </div>
+  
   <h2>Academic Publications:</h2>
+
   <ul>
     <li><a href="assets/thesis.pdf">Ranking and Clustering with Advice</a> - <em>PhD Thesis</em> - University of Melbourne, 2007</li>
     <li><a href="assets/soda-10.pdf">A Polynomial Time Approximation Scheme for <em>k-</em>Consensus Clustering</a> - with <a href="http://www.cs.mu.oz.au/~awirth/">Tony Wirth</a> - Symposium on Discrete Algorithms (SODA), 2010</li>
