--- a/CV.html
+++ b/CV.html
@@ -145,7 +145,7 @@
     </dd>
     <dt>Other</dt>
     <dd>
-      I have a long lasting interest in music and can play several instruments. I have experience with both Spanish and Japanese.
+      I have a long lasting interest in music and can play several instruments. I have experience with both the Spanish and Japanese languages.
     </dd>
   </dl>
   
