Whoops, wrong link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h2>Meteor</h2>
   <p>I'm pretty heavily involved in the <a href="http://meteor.com">Meteor</a> community.</p>
   <ul>
-    <li>I helped create <a href="http://oortcloud.github.com/meteorite/">Meteorite</a> and <a href="https://github.com/oortcloud/atmosphere">Atmosphere</a>,
+    <li>I helped create <a href="http://oortcloud.github.com/meteorite/">Meteorite</a> and <a href="http://atmosphere.meteor.com">Atmosphere</a>,
        tools that let developers share and use each other's meteor smart packages.</li>
     <li>I maintain an <a href="https://github.com/oortcloud/unofficial-meteor-faq">unofficial FAQ</a>, which give opinionated answers to a bunch of common questions.</li>
     <li>I worked with <a href="http://sachagreif.com">Sacha Grief</a> to create <a href="http://telesc.pe">Telescope</a>, a Hacker News clone "framework", about which we are writing an eBook.</li>
