--- a/index.html
+++ b/index.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Lato:700|Muli' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/screen.css" type="text/css">
 </head>
 <body>
   <div class="rhs sidebar">
     <img src="http://www.gravatar.com/avatar/9a4c135ce6e37b086dd365f790187f3c.png?s=200"/>
-    <p class="caption">You'll struggle to find a picture of me with Google Image search. Too many Tom Colemans I guess. This is me.</p>
+    <p class="caption">You'll struggle to find a picture of me with Google Image search. Too many Tom Colemans I guess. This is me (with Izzy).</p>
   </div>
 
   <h1>Tom Coleman</h1>
   <p>You've found me on the internet. This page is here to point you on to more useful places.</p>
-  
-  <h2>Work / Side Projects</h2>
-  <p>I'm a web developer with my finger in a few pies.</p>
+
+  <h2>Accounts</h2>
+  <p>Vastly more likely to be up to date. Probably the best way to get in touch.</p>
   <ul>
-    <li>I run <a href="http://percolatestudio.com">Percolate Studio</a>, a web application development studio.</li>
-    <li><a href="http://bindle.me">Bindle</a> is a site to make beautiful visual lists of what's important to you.
-</li>
-    <li><a href="http://crowdspot.com.au">CrowdSpot</a> is a map based survey tool to connect decision makers with the community.</li>
+    <li><a href="https://twitter.com/tmeasday" rel="me">Twitter</a></li>
+    <li><a href="https://github.com/tmeasday" rel="me">GitHub</a></li>
+    <li><a href="https://stackoverflow.com/users/670639/tom-coleman" rel="me">Stack Overflow</a></li>
   </ul>
-  
-  <h2>Meteor</h2>
-  <p>I'm pretty heavily involved in the <a href="http://meteor.com">Meteor</a> community.</p>
+
+  <h2>Hats</h2>
+  <p>I wear a few.</p>
   <ul>
-    <li>I helped create <a href="http://oortcloud.github.com/meteorite/">Meteorite</a> and <a href="http://atmosphere.meteor.com">Atmosphere</a>,
-       tools that let developers share and use each other's meteor smart packages.</li>
+    <li>I run <a href="http://percolatestudio.com">Percolate Studio</a>, an application development studio.</li>
+
+    <li><a href="http://sachagreif.com/">Sacha Greif</a> and I wrote <a href="https://www.discovermeteor.com">Discover Meteor</a>, which some fine folks think is <a href="https://www.discovermeteor.com/reviews">pretty good</a>.</li>
+
+    <li>We build and maintain <a href="https://atmospherejs.com">Atmosphere</a> , the Meteor package front end.</li>
+
+    <li>You might want to check out out the <a href="http://blog.percolatestudio.com">Percolate</a> or <a href="https://www.discovermeteor.com/blog">Discover Meteor</a> blogs to catch my thoughts on various topics.</li>
+  </ul>
+
+  <h2>Meteor and Open Source</h2>
+  <p>I like to stay involved in the <a href="http://meteor.com">Meteor</a> community.</p>
+  <ul>
     <li>I maintain an <a href="https://github.com/oortcloud/unofficial-meteor-faq">unofficial FAQ</a>, which give opinionated answers to a bunch of common questions.</li>
-    <li>I worked with <a href="http://sachagreif.com">Sacha Grief</a> to create <a href="http://telesc.pe">Telescope</a>, a Hacker News clone "framework", about which we are writing an eBook.</li>
-    <li>We (Percolate Studio) created <a href="http://getleague.com">League</a>, a sports management app in meteor.</li>
+
+    <li>I work on a bunch of <a href="https://atmospherejs.com/tmeasday">Meteor packages</a>, although <a href="https://atmospherejs.com/percolate">our official packages</a> are more likely to be production ready.</li>
+
+    <li>I've helped <a href="http://sachagreif.com">Sacha</a> with <a href="http://telesc.pe">Telescope</a> over its lifetime.</li>
   </ul>
-  
-  <h2>Open Source</h2>
-  <ul>
-    <li>I've done a bunch of things, feel free to peruse my Github <a href="http://github.com/tmeasday" rel="me">profile</a>.</li>
-    <li>I try to be helpful on <a href="http://stackoverflow.com/users/670639/tom-coleman" rel="me">Stack Overflow</a>.</li>
-    <li><a href="http://edifice-rails.com">Edifice</a> is a rails mini-framework for using CSS + JS better.</li>
-  </ul>
-  
-  <h2>Errata</h2>
-  <ul>
-    <li>I <a href="http://bindle.me/blog" rel="me">blog</a> here.</li>
-    <li>My <a href="CV.html">CV</a>, as of April 2012.</li>
-  </ul>
-  
+
   <h2>Academic Publications</h2>
-  
+  <p>For posterity.</p>
+
   <ul>
     <li><a href="assets/soda-10.pdf">A Polynomial Time Approximation Scheme for <em>k-</em>Consensus Clustering</a> - with <a href="http://www.cs.mu.oz.au/~awirth/">Tony Wirth</a> - Symposium on Discrete Algorithms (SODA), 2010</li>
     <li><a href="assets/thesis.pdf">Ranking and Clustering with Advice</a> - <em>PhD Thesis</em> - University of Melbourne, 2009</li>
@@ -55,7 +55,7 @@
     <li><a href="assets/alenex-08.pdf">Ranking Tournaments: Local Search and a New Algorithm (Conference Version)</a> - with <a href="http://www.cs.mu.oz.au/~awirth/">Tony Wirth</a> - Algorithm Engineering and Experiments (ALENEX)- 2008</li>
     <li><a href="assets/cats07.pdf">On The Complexity of Manipulating Elections</a> - with <a href="http://people.eng.unimelb.edu.au/vjteague/">Vanessa Teague</a> - Australian Theory Symposium (CATS) - 2007</li>
   </ul>
-  
+
 </body>
 </html>
 
