Small update Perc->Chroma

--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
   <h2>Hats</h2>
   <p>I wear a few.</p>
   <ul>
-    <li>I run <a href="http://percolatestudio.com">Percolate Studio</a>, an application development studio.</li>
+    <li>I'm one part of <a href="http://hichroma.com">Chroma</a>, a product company.</li>
 
     <li><a href="http://sachagreif.com/">Sacha Greif</a> and I wrote <a href="https://www.discovermeteor.com">Discover Meteor</a>, which some fine folks think is <a href="https://www.discovermeteor.com/reviews">pretty good</a>.</li>
 
-    <li>We build and maintain <a href="https://atmospherejs.com">Atmosphere</a> , the Meteor package front end.</li>
-
-    <li>You might want to check out out the <a href="http://blog.percolatestudio.com">Percolate</a> or <a href="https://www.discovermeteor.com/blog">Discover Meteor</a> blogs to catch my thoughts on various topics.</li>
+    <li>You might want to check out out the <a href="https://blog.hichroma.com">Chroma</a> or <a href="https://www.discovermeteor.com/blog">Discover Meteor</a> blogs to catch my thoughts on various topics.</li>
   </ul>
 
   <h2>Meteor and Open Source</h2>
